small correction to scss as skiplink was to visible on background which annoyed me

--- a/src/css/components/_skiplink.scss
+++ b/src/css/components/_skiplink.scss
@@ -21,7 +21,9 @@
         position: absolute;
         top: 10px;
         left: 10px;
-        background-color: $theme-primary-color;
+        background-color: $theme-secondary-color;
+        opacity: 0.00001;
+        border: 0 solid $theme-secondary-color;
     }
 
     .skiplink:focus {
